<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardDefault"
    tools:context=".ordercheckout.ui.activity.OrderCheckoutActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderSummaryTitle"
        style="@style/OrderSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:text="@string/order_summary_title_menu" />

    <View
        android:id="@+id/viewOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:background="@drawable/background_order_summary"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderSummaryTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderSummary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/layout_animation_slide_from_bottom"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="@dimen/margin_padding_small"
        app:layout_constraintBottom_toTopOf="@+id/tvSummaryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewOrder"
        tools:listitem="@layout/item_order_summary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSummaryTitle"
        style="@style/OrderSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_medium"
        android:text="@string/total_price"
        app:layout_constraintBottom_toTopOf="@id/btnOrderProduct"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSummarySubtitlePrice"
        style="@style/OrderSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_medium"
        android:text="@string/summary_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnOrderProduct"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOrderProduct"
        style="@style/OrderProductListButtonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_medium"
        android:text="@string/order_product_button"
        android:layout_marginTop="@dimen/margin_padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_order_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>