<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvOrderList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_medium"
    android:elevation="1dp"
    app:cardBackgroundColor="@color/colorCardDefault"
    app:cardCornerRadius="@dimen/margin_padding_medium"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderProductListPrice"
            style="@style/OrderProductListCardSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvOrderProductListPriceTotal"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrderProductListPriceTotal"
            app:layout_constraintEnd_toStartOf="@id/tvOrderProductListPriceTotal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderProductListPriceTotal"
            style="@style/OrderProductListCardSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            android:background="@drawable/background_price"
            android:text="@string/order_price"
            app:layout_constraintStart_toEndOf="@+id/tvOrderProductListPrice"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderProductListName"
            style="@style/OrderProductListCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderProductListPriceTotal"
            tools:text="Tomato" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderProductListDescription"
            style="@style/OrderProductListCardDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@+id/ivOrderProductList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderProductListName"
            tools:text="Lettuce, cauliflower, bell pepper" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivOrderProductList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOrderProductListDescription"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            android:padding="@dimen/margin_padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderProductListDescription"
            app:srcCompat="@drawable/ic_add_shopping" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderAdded"
            style="@style/OrderProductListCardAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_check"
            android:text="@string/order_added"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/ivShoppingCart"
            app:layout_constraintEnd_toEndOf="@+id/ivShoppingCart"
            app:layout_constraintStart_toStartOf="@+id/ivShoppingCart"
            app:layout_constraintTop_toTopOf="@+id/ivShoppingCart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>